--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ apply plugin: 'maven-publish'
 apply plugin: 'org.parchmentmc.librarian.forgegradle'
 apply plugin: 'org.spongepowered.mixin'
 
-version = '1.18.2-1.0'
+version = '1.18.2-indev20220522'
 group = 'com.guga.ordemparanormal'
 archivesBaseName = 'ordemparanormal'
 
