--- a/build.gradle
+++ b/build.gradle
@@ -8,14 +8,13 @@ buildscript {
     dependencies {
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
         classpath 'org.parchmentmc:librarian:1.+'
-        classpath 'org.spongepowered:mixingradle:0.7.+'
     }
 }
+apply plugin: 'java'
 apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 apply plugin: 'org.parchmentmc.librarian.forgegradle'
-apply plugin: 'org.spongepowered.mixin'
 
 version = '1.18.2-indev20220522'
 group = 'com.guga.ordemparanormal'
@@ -35,7 +34,6 @@ minecraft {
             property 'forge.logging.console.level', 'debug'
             property 'mixin.env.remapRefMap', 'true'
 			property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
-			arg "-mixin.config=ordemparanormal.mixin.json"
             jvmArgs "-Xmx4096m", "-Xms4096m"
             mods {
                 ordemparanormal {
@@ -82,11 +80,6 @@ repositories {
 dependencies {
     minecraft 'net.minecraftforge:forge:1.18.2-40.1.20'
     implementation fg.deobf("com.teamabnormals:blueprint:1.18.2-5.3.2")
-    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
-}
-
-mixin {
-    add sourceSets.main, "ordemparanormal.refmap.json"
 }
 
 jar {
@@ -98,10 +91,7 @@ jar {
                 "Implementation-Title"    : project.name,
                 "Implementation-Version"  : project.jar.archiveVersion,
                 "Implementation-Vendor"   : "guga",
-                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
-                "TweakClass"              : "org.spongepowered.asm.launch.MixinTweaker",
-                "TweakOrder"              : 0,
-                "MixinConfigs"            : "ordemparanormal.mixin.json"
+                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
         ])
     }
     finalizedBy 'reobfJar'
@@ -112,6 +102,8 @@ task sourcesJar(type: Jar) {
     archiveClassifier.set('sources')
     from sourceSets.main.allJava
 }
+
+compileJava.options.encoding = 'UTF-8'
 
 artifacts {
     archives sourcesJar
