Adicionado o  ritual de transferencia vital, e o icone do efeito de armadura de  sangue

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -92,6 +92,7 @@
         "Telopsia",
         "texturas",
         "tinta",
+        "transferencia",
         "Transfusão",
         "usando",
         "vazio",
