Foto familiar como item do ritual de teleporte adicionado

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,105 +1,107 @@
 {
-    "cSpell.words": [
-        "adicionados",
-        "adicionar",
-        "ajudarem",
-        "Amaldiçoar",
-        "Ameaças",
-        "Anotações",
-        "Aprimoramento",
-        "Arma",
-        "Armadura",
-        "Atroz",
-        "Aufa",
-        "Babako",
-        "Caos",
-        "Chamas",
-        "Cicatrização",
-        "Cinerária",
-        "Circulo",
-        "coisas",
-        "Completo",
-        "Conhecimento",
-        "Consumir",
-        "Contenção",
-        "craftar",
-        "Créditos",
-        "criaturas",
-        "Decadência",
-        "Deflagração",
-        "Descarnar",
-        "Detectar",
-        "Dissipar",
-        "Eletrocussão",
-        "Energia",
-        "Entropia",
-        "equipe",
-        "Esconder",
-        "escritura",
-        "Escritura",
-        "Espiral",
-        "Fantasma",
-        "feito",
-        "Físico",
-        "formato",
-        "futuro",
-        "Guga",
-        "Hemofagia",
-        "historia",
-        "Ilusões",
-        "incompletas",
-        "Inevitável",
-        "Inexistir",
-        "iniciar",
-        "itens",
-        "Japa",
-        "Lâmina",
-        "Livro",
-        "livros",
-        "Localização",
-        "Manancial",
-        "Mecanicas",
-        "Medo",
-        "Minecraft",
-        "modificar",
-        "Morte",
-        "muitas",
-        "Névoa",
-        "Olhos",
-        "Ordem",
-        "organizar",
-        "outras",
-        "pagina",
-        "papel",
-        "Pergaminhos",
-        "Perturbação",
-        "Peste",
-        "poder",
-        "Presença",
-        "programarem",
-        "projeto",
-        "Rejeitar",
-        "relacionadas",
-        "rituais",
-        "Rituais",
-        "Ruído",
-        "Sangue",
-        "serão",
-        "Tangível",
-        "Tecer",
-        "Tecnologia",
-        "Tela",
-        "Telopsia",
-        "texturas",
-        "tinta",
-        "transferencia",
-        "Transfusão",
-        "usando",
-        "vazio",
-        "Velocidade",
-        "versão",
-        "Vínculo",
-        "Vomitar",
-        "Zerar"
-    ]
+  "cSpell.words": [
+    "adicionados",
+    "adicionar",
+    "ajudarem",
+    "Amaldiçoar",
+    "Ameaças",
+    "Anotações",
+    "Aprimoramento",
+    "Arma",
+    "Armadura",
+    "Atroz",
+    "Aufa",
+    "Babako",
+    "Caos",
+    "Chamas",
+    "Cicatrização",
+    "Cinerária",
+    "Circulo",
+    "coisas",
+    "Completo",
+    "Conhecimento",
+    "Consumir",
+    "Contenção",
+    "craftar",
+    "Créditos",
+    "criaturas",
+    "Decadência",
+    "Deflagração",
+    "Descarnar",
+    "Detectar",
+    "Dissipar",
+    "Eletrocussão",
+    "Energia",
+    "Entropia",
+    "equipe",
+    "Esconder",
+    "escritura",
+    "Escritura",
+    "Espiral",
+    "Fantasma",
+    "feito",
+    "Físico",
+    "formato",
+    "futuro",
+    "Guga",
+    "Hemofagia",
+    "historia",
+    "Ilusões",
+    "incompletas",
+    "Inevitável",
+    "Inexistir",
+    "iniciar",
+    "itens",
+    "Japa",
+    "Lâmina",
+    "Livro",
+    "livros",
+    "Localização",
+    "Manancial",
+    "Mecanicas",
+    "Medo",
+    "Minecraft",
+    "modificar",
+    "Morte",
+    "muitas",
+    "Névoa",
+    "Olhos",
+    "opmod",
+    "Ordem",
+    "organizar",
+    "outras",
+    "pagina",
+    "papel",
+    "Pergaminhos",
+    "Perturbação",
+    "Peste",
+    "poder",
+    "Presença",
+    "programarem",
+    "projeto",
+    "Rejeitar",
+    "relacionadas",
+    "rituais",
+    "Rituais",
+    "Ruído",
+    "Sangue",
+    "serão",
+    "Tangível",
+    "Tecer",
+    "Tecnologia",
+    "Tela",
+    "teleporte",
+    "Telopsia",
+    "texturas",
+    "tinta",
+    "transferencia",
+    "Transfusão",
+    "usando",
+    "vazio",
+    "Velocidade",
+    "versão",
+    "Vínculo",
+    "Vomitar",
+    "Zerar"
+  ]
 }
