--- a/build.gradle
+++ b/build.gradle
@@ -75,11 +75,14 @@ sourceSets.main.resources { srcDir 'src/generated/resources' }
 
 repositories {
 	maven { url = "https://maven.jaackson.me" }
+    maven { url 'https://maven.blamejared.com' }
 }
 
 dependencies {
     minecraft 'net.minecraftforge:forge:1.18.2-40.1.20'
     implementation fg.deobf("com.teamabnormals:blueprint:1.18.2-5.3.2")
+    compileOnly fg.deobf("vazkii.patchouli:Patchouli:1.18.2-69:api")
+    runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:1.18.2-69")
 }
 
 processResources {}
