--- a/build.gradle
+++ b/build.gradle
@@ -16,16 +16,16 @@ apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 apply plugin: 'org.parchmentmc.librarian.forgegradle'
 
-version = '1.19.2-0.1.1alpha'
+version = "${mc_version}-${mod_version}"
 group = 'com.guga.ordemparanormal'
-archivesBaseName = 'ordemparanormal'
+archivesBaseName = "${modId}"
 
 java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
 println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))
 minecraft {
-    mappings channel: 'official', version: '1.19.2'
-    mappings channel: 'parchment', version: '2022.08.14-1.19.2'
+    mappings channel: 'official', version: "${mc_version}"
+    mappings channel: 'parchment', version: "${parchment_version}-${mc_version}"
     accessTransformer = file("src/main/resources/META-INF/accesstransformer.cfg")
     runs {
         client {
@@ -79,10 +79,10 @@ repositories {
 }
 
 dependencies {
-    minecraft 'net.minecraftforge:forge:1.19.2-43.2.0'
-    implementation fg.deobf("com.teamabnormals:blueprint:1.19.2-6.1.2")
-    compileOnly fg.deobf("vazkii.patchouli:Patchouli:1.19.2-77:api")
-    runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:1.19.2-77")
+    minecraft "net.minecraftforge:forge:${mc_version}-${forge_version}"
+    implementation fg.deobf("com.teamabnormals:blueprint:${mc_version}-${bp_version}")
+    compileOnly fg.deobf("vazkii.patchouli:Patchouli:${mc_version}-${pc_version}:api")
+    runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:${mc_version}-${pc_version}")
 }
 
 processResources {}
