--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,4 @@
-# Sets default memory used for gradle commands. Can be overridden by user or command line properties.
-# This is required to provide enough memory for the Minecraft decompilation process.
-org.gradle.jvmargs=-Xmx4G
+org.gradle.jvmargs=-Xmx5G
 org.gradle.daemon=false
 org.gradle.caching=true
 org.gradle.parallel=true
@@ -8,7 +6,13 @@ gradle.cache.push=false
 
 modName=OrdemParanormal
 modId=ordemparanormal
-modVersion=5.1.1
+mod_version=0.1.2
+mc_version=1.19.2
+
+bp_version=6.1.2
+forge_version=43.2.0
+pc_version=77
+parchment_version=2022.08.14
 
 minecraft=1.18.1
 forge=39.0.20
